gcc/testsuite/treelang/compile/autofunc.tree
// { dg-do compile }
automatic int bar ();  // { dg-error "automatic" }

bar () {
	return -12;
}
